fixes navbar spacing issue in mobile IE

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -401,5 +401,10 @@ ul.nav li a:hover {
   }
 }
 
+.hamburger {
+    width: 23px;
+}
+
+
 
 
